# robocup-gamectrl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: main.cpp
src/robocup/: game_control_data_t.h  game_controller_client_t.cpp  game_controller_client_t.h  spl_coach_message_t.h
